fix: Status card not showing up.

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -39,6 +39,7 @@
 }
 
 .inner_card {
+    position: absolute;
     background:  rgb(26, 25, 25); /*linear-gradient(145deg, #eeecec, #ffffff);*/
     padding: 0;
     /* border-radius: 1%; */
@@ -47,6 +48,7 @@
     width: 100%;
     box-shadow:  30px 30px 200px #dbdada;
     transition: 0.8s;
+    z-index: 1;
 }
 
 .inner_card p{
@@ -70,7 +72,6 @@
     height: 400px;
     width: 100%;
     transition: 0.4s;
-    z-index: -2;
 }
 
 .single_card:hover .status_card {
